--- a/analyses/model_1.ipynb
+++ b/analyses/model_1.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,44 +243,44 @@
     "    bsup_tau = bsup - tau\n",
     "    bsup_tau2 = bsup_tau ** 2\n",
     "    bsup_tau3 = bsup_tau ** 3\n",
-    "    return 1 / (3 * (a1 - a0)) * (norm.cdf(a1_tilde) * (bsup_tau3 + 3 * sigma2 * bsup_tau - (bsup - a1)**3) - norm.cdf(a0_tilde) * (bsup_tau3 + 3 * sigma2 * bsup_tau - (bsup - a0)**3) + norm.pdf(a1_tilde) * (sigma3 * (a1_tilde ** 2 + 2) + 3 * sigma * bsup_tau2 - sigma2 * bsup_tau * a1_tilde) - norm.pdf(a0_tilde) * (sigma3 * (a0_tilde ** 2 + 2) + 3 * sigma * bsup_tau2 - sigma2 * bsup_tau * a0_tilde))"
+    "    return 1 / (3 * (a1 - a0)) * (norm.cdf(a1_tilde) * (bsup_tau3 + 3 * sigma2 * bsup_tau - (bsup - a1)**3) - norm.cdf(a0_tilde) * (bsup_tau3 + 3 * sigma2 * bsup_tau - (bsup - a0)**3) + norm.pdf(a1_tilde) * (sigma3 * (a1_tilde ** 2 + 2) - 3 * sigma * bsup_tau2 - 3 * sigma2 * bsup_tau * a1_tilde) - norm.pdf(a0_tilde) * (sigma3 * (a0_tilde ** 2 + 2) - 3 * sigma * bsup_tau2 - 3 * sigma2 * bsup_tau * a0_tilde))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.05573296070740104"
+       "-0.00486044869741656"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_second_moment(0.4, 0.5, 0.5, .05)"
+    "get_second_moment(0.3, 0.5, 0.5, .01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.05488567707491074\n"
+      "0.005111301098100486\n"
      ]
     }
    ],
    "source": [
-    "a0, a1, tau, sigma = 0.4, 0.5, 0.5, 0.05\n",
+    "a0, a1, tau, sigma = 0.3, 0.5, 0.5, 0.01\n",
     "moment2 = 0\n",
     "for t in range(2000000):\n",
     "    bid = a0 + (a1 - a0) * rndm.rand()\n",
